welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if ( (n>100) || (n>200) ) {
             ^