welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (((n<=100)&&(n>=90))||((n<=200)&&(n>=190))) {
		return true
	}
	else if ( (n>100) || (n>200) ) {
		return false
	}

}
